cros: Display VKEY Escape with string of Esc in KSV

Majority of the keyboard layouts use "Esc" or "esc" to present
"Escape". This cl adds special handling to display VKEY_ESCAPE
in Keyboard Shortcut Helper (KSV).

Bug: 821841
Test: manually tested.
Change-Id: I3b514325b5cc371c33c64973d0b0e3f9ee9548c6
Reviewed-on: https://chromium-review.googlesource.com/966872
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543857}
Former-commit-id: f4404931c8ee17c43490cf3a46e1c8e804583028